# llm-benchmarks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ADD_SONNET_4.5_INSTRUCTIONS.md  AGENTS.md  Dockerfile  Dockerfile-cloud  Dockerfile-gguf  Dockerfile-tf  Dockerfile-vllm  FILES_CREATED.md  HTTP_INGEST_SPEC.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK-START-ERROR-CLASSIFICATION.md  QUICK_START.md  README.md  README_ADDING_MODELS.md  REASONING_MODELS.md  RELIABILITY_LIFECYCLE_V2.md  RESEARCH_SUMMARY.md  TROUBLESHOOTING.md  alpaca.ipynb  docker-compose.cloud.yml  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  dolly2.ipynb  gpt2.ipynb  llama.ipynb  main.py  models_config.yaml  openai.ipynb  pyproject.toml  requirements.txt  test-credential-leak.txt  test_discovery_matcher_filters.py  (+4 more)
.cursor/rules/: claude.mdc
.github/workflows/: deploy.yml
api/: .env.example  SIMPLE_RUNNER_USAGE.md  bench_headless.py  bench_model_lifecycle.py  bench_simple_runner.py  pyproject.toml  requirements.txt  run_cloud.py  run_hf.py  run_vllm.py  test_simple_runner.py
api/llm_bench/: catalog_hygiene.py  config.py  http_output.py  logging.py  models_db.py  types.py  utils.py
api/llm_bench/cloud/: logging.py  metrics.py  server.py
api/llm_bench/cloud/providers/: anthropic.py  anyscale.py  azure.py  bedrock.py  cerebras.py  databricks.py  deepinfra.py  fireworks.py  groq.py  lambda.py  openai.py  openai_compat.py  openrouter.py  runpod.py  together.py  vertex.py
api/llm_bench/discovery/: __init__.py  cli.py  matcher.py  openrouter.py  promotion.py
api/llm_bench/local/gguf/: create_model.py  server.py  utils.py
api/llm_bench/local/hf/: server.py
api/llm_bench/local/hf/tgi/: __init__.py  generate.py
api/llm_bench/local/hf/transformers/: generate.py
api/llm_bench/model_lifecycle/: __init__.py  classifier.py  cli.py  collector.py
api/llm_bench/operator/: __init__.py  __main__.py  actions.py  cli.py  engine.py  io.py
api/llm_bench/ops/: README-ERROR-CLASSIFICATION.md  __init__.py  error_rollups.py  error_taxonomy.py  llm_error_classifier.py  provider_state.py  reliability_cli.py
api/llm_bench/scheduler/: __init__.py  cli.py  health.py  mongo.py  policies.py  queue.py  reaper.py  runner.py  worker.py
api/llm_bench_api/: api  api.py  config.py  logging.py  types.py  utils.py
api/llm_bench_api/cloud/: anthropic.py  azure.py  bedrock.py  deepinfra.py  fireworks.py  google.py  logging.py  openai.py  server.py  together.py  vertex.py
api/llm_bench_api/cloud/providers/: anthropic.py  anyscale.py  azure.py  bedrock.py  databricks.py  deepinfra.py  fireworks.py  groq.py  openrouter.py  runpod.py  vertex.py
api/llm_bench_api/local/: gguf.py
api/tests/: test_bedrock_runner.py  test_catalog_hygiene.py  test_cloud_metrics_contract.py  test_discovery_promotion.py  test_model_lifecycle_classifier.py  test_openai_compat_runner.py  test_runner_validation.py  test_scheduler_health.py  test_scheduler_runner.py
cloud/: .env.example  Dockerfile-cloud  Dockerfile-scheduler  README.md  docker-compose.cloud.yml  models.json  run_cloud.py
data/: llm_results.csv
docs/: bedrock-runner-control-plane.md
docs/sessions/: 2026-01-01-ai-operator-implementation.md
docs/specs/: ai-operator.md
docs/tasks/: benchmark-ops-master-list.md
gguf/: create_models.sh  pyproject.toml  requirements.txt
gguf/llm_bench_gguf/: api.py  create_model.py  create_models.py  server.py  utils.py
huggingface/: pyproject.toml  requirements.txt
huggingface/llm_bench_huggingface/: __init__.py  api.py  server.py
huggingface/llm_bench_huggingface/tgi/: docker.py  generate.py
huggingface/llm_bench_huggingface/transformers/: generate.py
llm_benchmarks/: api.py  config.py  generation.py  logging.py  plotting.py  run_from_yaml.py  test_benchmark.py  transformers.py  utils.py
llm_benchmarks/gguf/: api.py
llm_benchmarks/huggingface/: api.py
llm_benchmarks/huggingface/tgi/: __init__.py  generate.py
llm_benchmarks/huggingface/transformers/: __init__.py  generate.py
llm_benchmarks/tests/: test_benchmark.py
llm_benchmarks/tgi/: api.py  docker.py  utils.py
llm_benchmarks/transformers/: __init__.py  api.py  transformers.py
local/: .env.example  README.md  docker-compose.local.yml  run_gguf.py  run_hf.py  run_test.py  run_vllm.py
local/app/: pyproject.toml  requirements.txt
local/app/llm_bench_vllm/: generate.py  server.py
local/gguf/: Dockerfile-gguf  create_models.sh  pyproject.toml
local/gguf/app/: create_model.py  server.py
local/gguf/llm_bench_gguf/: create_model.py  server.py
local/huggingface/: Dockerfile-huggingface  pyproject.toml  requirements.txt  tgi_server.sh
local/huggingface/app/: server.py
local/huggingface/app/tgi/: docker.py  generate.py
local/huggingface/app/transformers/: generate.py
local/huggingface/llm_bench_hf/: server.py
local/huggingface/llm_bench_hf/tgi/: docker.py  generate.py  tgi_docker.py
local/huggingface/llm_bench_hf/transformers/: generate.py
local/vllm/: Dockerfile-vllm  pyproject.toml
local/vllm/app/: server.py
local/vllm/llm_bench_vllm/: __init__.py  generate.py  server.py
models/: cloud.json
notebooks/: alpaca.ipynb  custom_plots.ipynb  dolly2.ipynb  falcon.ipynb  gpt2.ipynb  llama.ipynb  plot.ipynb  plot_yaml.ipynb
notebooks/old/: dolly2.ipynb  falcon.ipynb
ops/: README.md  classify-errors.sh  daily-health-check.py  llm-discovery.service  llm-discovery.timer  llm-health-check-failure@.service  llm-health-check.service  llm-health-check.timer
scripts/: README.md  add_model_to_db.py  add_sonnet_4.5.sh  cleanup_staging.js  enqueue_job.js  fetch_and_benchmark.py  fetch_and_benchmark.sh  model_status_report.sh  mongo_indexes.js  run_cloud.py  run_cpp.sh  run_gguf.py  run_hf.py  run_tgi.py  run_transformers.py  run_vllm.py  seed_model.js  test_anthropic_models.py
static/: llama_compare_size_inference
vllm/: pyproject.toml  requirements.txt
vllm/llm_bench_vllm/: __init__.py  api.py  generate.py  server.py
