[tool.poetry]
name = "llm-benchmarks"
version = "0.1.0"
description = "Benchmarking local and cloud LLMs"
authors = ["David Rose <david@drose.io>"]
license = "MIT"
package-mode = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true

