[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-bench-api"
version = "0.1.0"
description = "Benchmarking various LLMs inference speed"
authors = [ "David Rose <david@drose.io>",]
license = "MIT"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pymongo = "*"
pynvml = "*"
flask = "*"
pytz = "*"
openai = "*"
fastapi = "*"
uvicorn = "*"
httpx = "*"
typer = "*"
python-dotenv = "*"
redis = "*"
