[project]
name = "llm-benchmarks"
version = "0.1.0"
description = "Benchmarking local and cloud LLMs"
authors = [
    { name = "David Rose", email = "david@drose.io" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pymongo>=4.6.3",
    "pynvml>=11.5.0",
    "flask>=3.0.3",
    "pytz>=2024.1",
    "openai>=1.23.2",
    "fastapi>=0.110.2",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "typer>=0.12.3",
    "python-dotenv>=1.0.1",
    "redis>=5.0.3",
    "huggingface-hub[hf-transfer]>=0.22.2",
    "json5>=0.9.25",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.4",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F", "Q000"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

