[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-bench-huggingface"
version = "0.1.0"
description = "API and generation for benchmarking HuggingFace (TGI, Transformers)"
authors = ["David Rose <david@drose.io>"]

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llm-bench-api = { path = "../api" }
torch = "^2.1.0"
transformers = "^4.35.1"
bitsandbytes = "^0.41.2.post2"
accelerate = "^0.24.1"
einops = "^0.7.0"
flask = "^3.0.0"
numpy = "^1.26.2"
tqdm = "^4.66.1"
triton = "^2.1.0"
auto-gptq = "^0.5.1"
scipy = "^1.11.3"
xformers = "^0.0.22.post7"
optimum = "^1.14.1"
autoawq = "^0.1.7"
transformers-stream-generator = "^0.0.4"
