[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-bench-vllm"
version = "0.1.0"
description = "API and generation for benchmarking VLLM"
authors = ["David Rose <david@drose.io>"]

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llm-bench-api = { path = "../api" }
vllm = "^0.2.1.post1"
