[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
description = "API and generation for benchmarking llama-cpp / GGUF models"
authors = ["David Rose <david@drose.io>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
tiktoken = "^0.6.0"
boto3 = "^1.34.88"
pymongo = "^4.6.3"
pynvml = "^11.5.0"
flask = "^3.0.3"
pytz = "^2024.1"
openai = "^1.23.2"
httpx = "^0.27.0"
typer = "^0.12.3"
python-dotenv = "^1.0.1"
redis = "^5.0.3"
filelock = "^3.13.4"
