[build-system]
requires = [
    "poetry-core",
    "packaging",
    "wheel"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-bench-vllm"
description = "API and generation for benchmarking VLLM"
version = "0.1.0"
authors = ["David Rose <david@drose.io>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
vllm = "^0.4.0.post1"
flask = "^3.0.3"
numpy = "^1.26.4"
click = "^8.1.7"
pymongo = "^4.6.3"
pynvml = "^11.5.0"
pytz = "^2024.1"
einops = "^0.7.0"